fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -103,7 +103,7 @@
   "Leave document": "离开文档",
   "You have left the shared document": "你已经离开了此共享文档",
   "Could not leave document": "无法离开文档",
-  "Disconnect analytics": "Disconnect analytics",
+  "Disconnect analytics": "连接断开分析",
   "Home": "主页",
   "Drafts": "草稿箱",
   "Search": "搜索",
@@ -111,6 +111,7 @@
   "Settings": "设置",
   "Profile": "基本资料",
   "Templates": "文档模板",
+  "Notification settings": "通知设置",
   "Notifications": "通知",
   "Preferences": "偏好设置",
   "Documentation": "帮助文档",
@@ -134,6 +135,11 @@
   "Appearance": "界面风格",
   "Change theme": "更改主题",
   "Change theme to": "更改主题为",
+  "Share link copied": "分享链接已复制",
+  "Go to collection": "转到文档集",
+  "Go to document": "转到文档",
+  "Revoke link": "撤消链接",
+  "Share link revoked": "此分享链接已被撤销",
   "Switch workspace": "切换工作区",
   "Select a workspace": "选择工作区",
   "New workspace": "新建工作区",
@@ -154,7 +160,9 @@
   "Revision": "修订",
   "Navigation": "导航",
   "Notification": "通知",
+  "Groups": "群组",
   "People": "用户",
+  "Share": "分享",
   "Workspace": "工作区",
   "Recent searches": "最近的搜索",
   "currently editing": "正在编辑",
@@ -197,8 +205,8 @@
   "Install now": "立即安装",
   "Disconnect": "断开连接",
   "Disconnecting": "正在断开连接",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "您确定要移除与 <em>{{ service }}</em> 的集成吗？",
+  "This will stop sending analytics events to the configured instance.": "这将停止向配置实例发送分析事件。",
   "Deleted Collection": "删除文档集",
   "Untitled": "无标题",
   "Unpin": "取消置顶",
@@ -341,7 +349,7 @@
   "Disable this setting to discourage search engines from indexing the page": "禁用此设置以阻止搜索引擎对该页建立索引",
   "Show last modified": "显示最后修改",
   "Display the last modified timestamp on the shared page": "在分享页面上显示最后修改的时间戳",
-  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
+  "All documents in this collection will be shared on the web, including any new documents added later": "此文档集中的所有文档将在网上共享，包括以后添加的任何新文档",
   "Invite": "邀请",
   "{{ userName }} was added to the collection": "{{ userName }} 已添加到文档集",
   "{{ count }} people added to the collection": "已添加 {{ count }} 人到文档集中",
@@ -374,8 +382,8 @@
   "Active <1></1> ago": " <1></1> 前活跃",
   "Never signed in": "从未登录",
   "Leave": "离开",
-  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
-  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "任何拥有此链接的人均可访问，因为其所属文档集 <2>{sharedParent.sourceTitle}</2> 已设为分享状态",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "任何拥有此链接的人均可访问，因为其父级文档 <2>{sharedParent.sourceTitle}</2> 已设为分享状态",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "嵌套文档不会在网页上共享。切换共享以启用访问，这将是未来的默认行为。",
   "{{ userName }} was added to the document": "{{ userName }} 已被添加到此文档",
   "{{ count }} people added to the document": "{{ count }} 个人被添加到此文档",
@@ -535,7 +543,6 @@
   "Security": "安全性",
   "Features": "功能",
   "Members": "成员",
-  "Groups": "群组",
   "API Keys": "API 密钥",
   "Applications": "应用",
   "Shared Links": "分享的链接",
@@ -571,18 +578,12 @@
   "New document in <em>{{ collectionName }}</em>": "在 <em>{{ collectionName }}</em> 中新建文档",
   "New child document": "新建子文档",
   "Save in workspace": "保存到工作区",
-  "Notification settings": "通知设置",
   "Revoke {{ appName }}": "撤回 {{ appName }}",
   "Revoking": "吊销中",
   "Are you sure you want to revoke access?": "你确定要吊销权限吗？",
   "Delete app": "删除应用",
   "Revision options": "修订选项",
-  "Share link revoked": "此分享链接已被撤销",
-  "Share link copied": "分享链接已复制",
   "Share options": "分享选项",
-  "Go to collection": "Go to collection",
-  "Go to document": "转到文档",
-  "Revoke link": "撤消链接",
   "Contents": "目录",
   "Headings you add to the document will appear here": "添加到文档中的标题将显示在这里",
   "Table of contents": "目录",
@@ -590,11 +591,11 @@
   "Change email": "更换邮箱地址",
   "Suspend user": "停用用户",
   "An error occurred while sending the invite": "发送邀请时遇到错误",
-  "User options": "用户选项",
   "Change role": "更改角色",
   "Resend invite": "重新发送邀请",
   "Revoke invite": "撤消邀请",
   "Activate user": "激活用户",
+  "User options": "用户选项",
   "template": "模板",
   "document": "文档",
   "published": "已发布",
@@ -632,7 +633,6 @@
   "Archived by {{userName}}": "已被 {{userName}} 存档",
   "Sorry, an error occurred saving the collection": "抱歉，保存文档集时出错",
   "Add a description": "添加描述",
-  "Share": "分享",
   "Overview": "概览",
   "Recently updated": "最近更新",
   "Recently published": "最近发布",
@@ -1009,7 +1009,7 @@
   "Guest": "访客",
   "Never used": "从未被使用过",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "你确定要删除应用 {{ appName }} 吗？此操作不可被撤回。",
-  "Title": "Title",
+  "Title": "标题",
   "Shared by": "共享自",
   "Date shared": "分享日期",
   "Last accessed": "上次访问",
