--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -560,6 +560,9 @@
   "Integrations": "Integrations",
   "API key": "API key",
   "Show path to document": "Show path to document",
+  "Path to document": "Path to document",
+  "Export collection": "Export collection",
+  "Rename": "Rename",
   "Sort in sidebar": "Sort in sidebar",
   "A-Z sort": "A-Z sort",
   "Z-A sort": "Z-A sort",
