custom node, lazy render menu for perf

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -564,6 +564,7 @@
   "Rename": "Rename",
   "Collection menu": "Collection menu",
   "Comment options": "Comment options",
+  "Enable embeds": "Enable embeds",
   "Document options": "Document options",
   "File": "File",
   "Group member options": "Group member options",
