fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "Copier l'identifiant",
   "Clear IndexedDB cache": "Vider le cache IndexedDB",
   "IndexedDB cache cleared": "Cache IndexedDB vidé",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Activer la journalisation de débogage",
   "Debug logging enabled": "Journal de débogage activé",
   "Debug logging disabled": "Journal de débogage désactivé",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Désolé, le chargement d'une partie de l'application a échoué. C'est probablement dû au fait qu'elle a été mise à jour depuis que vous avez ouvert l'onglet, ou en raison d'une requête réseau échouée. Essayez d'actualiser la page.",
   "Reload": "Actualiser",
   "Something Unexpected Happened": "Quelque chose d'inattendu s'est produit",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Désolé, une erreur irrécupérable s'est produite{{notified}}. Essayez d'actualiser la page, il s'agit peut-être d'un problème temporaire.",
   "our engineers have been notified": "nos ingénieurs ont été notifiés",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Afficher détail",
   "{{userName}} archived": "{{userName}} a archivé",
   "{{userName}} restored": "{{userName}} a restauré",
