fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "Copiar ID",
   "Clear IndexedDB cache": "Borrar caché de IndexedDB",
   "IndexedDB cache cleared": "Caché de IndexedDB borrado",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Activar/Desactivar registro de depuración",
   "Debug logging enabled": "Registro de depuración activado",
   "Debug logging disabled": "Registro de depuración desactivado",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Lo sentimos, parte de la aplicación no pudo ser cargada. Esto puede deberse a que se actualizó desde que abriste la pestaña o debido a una solicitud de red fallida. Por favor intenta recargar la página.",
   "Reload": "Recargar",
   "Something Unexpected Happened": "Ha ocurrido algo inesperado",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Lo sentimos, se ha producido un error irrecuperable{{notified}}. Intenta recargar la página, pudo haber sido un error temporal.",
   "our engineers have been notified": "nuestros ingenieros han sido notificados",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Mostrar detalle",
   "{{userName}} archived": "{{userName}} ha archivado",
   "{{userName}} restored": "{{userName}} ha restaurado",
