fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "Kopírovat ID",
   "Clear IndexedDB cache": "Smazat mezipaměť IndexedDB",
   "IndexedDB cache cleared": "Mezipaměť indexedDB vymazána",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Toggle debug logging",
   "Debug logging enabled": "Zaznamenávání logů povoleno",
   "Debug logging disabled": "Zaznamenávání logů zakázáno",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Litujeme, část aplikace se nepodařilo načíst. Může to být způsobeno tím, že byla aktualizována od chvíle, kdy jste kartu otevřeli, nebo kvůli neúspěšnému síťovému požadavku. Zkuste znovu načíst.",
   "Reload": "Znovu načíst",
   "Something Unexpected Happened": "Stalo se něco nečekaného",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Omlouváme se, došlo k neopravitelné chybě{{notified}}. Zkuste prosím stránku znovu načíst, může to být dočasná závada.",
   "our engineers have been notified": "naši technici byli upozorněni",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Zobrazit podrobnosti",
   "{{userName}} archived": "{{userName}} archivoval",
   "{{userName}} restored": "{{userName}} obnovil",
