fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "ID kopieren",
   "Clear IndexedDB cache": "IndexedDB Cache löschen",
   "IndexedDB cache cleared": "IndexedDB Cache gelöscht",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Diagnoseprotokolle aktivieren/deaktivieren",
   "Debug logging enabled": "Diagnoseprotokolle aktiviert",
   "Debug logging disabled": "Diagnoseprotokolle deaktiviert",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Leider konnte ein Teil der Software nicht geladen werden weil der Inhalt sich inzwischen geändert hat oder eine Abfrage nicht erfolgreich abgeschlossen werden konnte. Bitte neu laden.",
   "Reload": "Neu Laden",
   "Something Unexpected Happened": "Ein unerwarteter Fehler ist aufgetreten",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Entschuldigung, ein Fehler ist aufgetreten{{notified}}. Bitte versuche die Seite neu zu laden, es könnte inzwischen wieder funktionieren.",
   "our engineers have been notified": "unsere Entwickler wurden benachrichtigt",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Details anzeigen",
   "{{userName}} archived": "{{userName}} archivierte",
   "{{userName}} restored": "{{userName}} stellte wieder her",
