fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "Azonosító másolása",
   "Clear IndexedDB cache": "IndexedDB gyorsítótárának törlése",
   "IndexedDB cache cleared": "Az IndexedDB gyorsítótára törölve",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Hibakeresési naplózás be- vagy kikapcsolása",
   "Debug logging enabled": "Hibakeresési naplózás engedélyezve",
   "Debug logging disabled": "Hibakeresési naplózás letiltva",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Elnézést, az alkalmazás egy részének betöltése sikertelen. Lehet, hogy frissült, mióta megnyitotta a fület, vagy hálózati kapcsolati hiba történt. Kérem próbálja újratölteni.",
   "Reload": "Újratöltés",
   "Something Unexpected Happened": "Valami váratlan történt",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Elnézést, egy helyrehozhatatlan hiba történt {{notified}}. Kérem próbálja újratölteni a lapot, lehet, hogy csak átmeneti a probléma.",
   "our engineers have been notified": "a mérnökeinket éretsítettük",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Részletek mutatása",
   "{{userName}} archived": "{{userName}} archiválta",
   "{{userName}} restored": "{{userName}} visszaállította",
