fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "Copia ID",
   "Clear IndexedDB cache": "Pulisci cache IndexedDB",
   "IndexedDB cache cleared": "Cache IndexedDB pulita",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Attiva/Disattiva il log di debug",
   "Debug logging enabled": "Log di debug attivato",
   "Debug logging disabled": "Log di debug disattivato",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Spiacenti, parte dell'applicazione non si è caricata correttamente. È possibile che sia stata aggiornata da quando hai aperto la scheda oppure è fallita una richiesta di rete. Si prega di ricaricare la pagina.",
   "Reload": "Ricaricare",
   "Something Unexpected Happened": "È successo qualcosa di imprevisto",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Spiacenti, si è verificato un errore irreversibile{{notified}}. Prova a ricaricare la pagina, potrebbe essere un problema temporaneo.",
   "our engineers have been notified": "i nostri ingegneri sono stati informati",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Mostra dettagli",
   "{{userName}} archived": "{{userName}} archiviato",
   "{{userName}} restored": "{{userName}} recuperato",
