fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "ID をコピー",
   "Clear IndexedDB cache": "データベースのインデックスを削除する",
   "IndexedDB cache cleared": "データベースのインデックスを削除しました",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "デバッグログの切り替え",
   "Debug logging enabled": "デバッグログは有効です",
   "Debug logging disabled": "デバッグログは無効です",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "一部のアプリケーションを読み込めませんでした。 再読み込みしてください。",
   "Reload": "再読み込み",
   "Something Unexpected Happened": "予期せぬエラーが発生しました",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "回復不能なエラーが発生しました {{notified}}。ページを再読み込みしてください。",
   "our engineers have been notified": "開発者に通知されました",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "詳細を表示",
   "{{userName}} archived": "{{userName}} がアーカイブしました",
   "{{userName}} restored": "{{userName}} が復元しました",
