fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "Kopiuj ID",
   "Clear IndexedDB cache": "Usuń cache IndexedDB",
   "IndexedDB cache cleared": "Usunięto cache IndexedDB",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Przełącz rejestrowanie debugowania",
   "Debug logging enabled": "Rejestrowanie debugowania włączone",
   "Debug logging disabled": "Rejestrowanie debugowania wyłączone",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Przepraszamy, nie udało się załadować części aplikacji. Może to być spowodowane tym, że został zaktualizowany od momentu otwarcia karty lub z powodu nieudanego żądania sieciowego. Spróbuj ponownie załadować.",
   "Reload": "Odśwież",
   "Something Unexpected Happened": "Wystąpił nieoczekiwany błąd",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Przepraszamy, wystąpił nieodwracalny błąd {{notified}}. Spróbuj ponownie załadować stronę, może to być tymczasowa usterka.",
   "our engineers have been notified": "nasi inżynierowie zostali powiadomieni",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Pokaż szczegóły",
   "{{userName}} archived": "Użytkownik {{userName}} zarchiwizował",
   "{{userName}} restored": "Użytkownik {{userName}} przywrócił",
