fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "Copiar ID",
   "Clear IndexedDB cache": "Apagar cache do IndexedDB",
   "IndexedDB cache cleared": "Cache do IndexedDB apagada",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Alternar log de depuração",
   "Debug logging enabled": "Log de depuração habilitado",
   "Debug logging disabled": "Log de depuração desativado",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Parte da aplicação não foi carregada. Isto pode ser porque foi atualizado desde que abriu o separador ou devido a um erro de rede. Tente recarregar.",
   "Reload": "Actualizar",
   "Something Unexpected Happened": "Algo inesperado aconteceu",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Ocorreu um erro irrecuperável{{notified}}. Tente recarregar a página, pode ter sido uma falha temporária.",
   "our engineers have been notified": "os nossos engenheiros foram notificados",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Mostrar detalhe",
   "{{userName}} archived": "{{userName}} arquivado",
   "{{userName}} restored": "{{userName}} restaurado",
