fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "Kopiera ID",
   "Clear IndexedDB cache": "Rensa IndexedDB cache",
   "IndexedDB cache cleared": "IndexedDB cache rensad",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Aktivera eller inaktivera felsökningsloggning",
   "Debug logging enabled": "Felsökningsloggning aktiverad",
   "Debug logging disabled": "Felsökningsloggning inaktiverad",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Tyvärr, en del av programmet kunde inte laddas. Det kan bero på att den uppdaterades sedan du öppnade fliken eller på grund av en misslyckad nätverksbegäran. Försök att ladda om.",
   "Reload": "Ladda om",
   "Something Unexpected Happened": "Något oväntat hände",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Tyvärr uppstod ett oåterställbart fel{{notified}}. Försök att ladda om sidan, det kan ha varit ett tillfälligt fel.",
   "our engineers have been notified": "våra ingenjörer har underrättats",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Visa detaljer",
   "{{userName}} archived": "{{userName}} arkiverade",
   "{{userName}} restored": "{{userName}} återställde",
