fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "Kimliği Kopyala",
   "Clear IndexedDB cache": "IndexedDB önbelleğini temizle",
   "IndexedDB cache cleared": "IndexedDB önbelleği temizlendi",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Hata ayıklama günlüklemeyi aç/kapat",
   "Debug logging enabled": "Hata ayıklama günlüğü etkinleştirildi",
   "Debug logging disabled": "Hata ayıklama günlüğü devre dışı bırakıldı",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Maalesef uygulamanın bir kısmı yüklenemedi. Bunun nedeni, sekmeyi açtığınızdan beri güncellenmiş olması veya başarısız bir ağ isteği olabilir. Lütfen yeniden yüklemeyi deneyin.",
   "Reload": "Yeniden yükle",
   "Something Unexpected Happened": "Beklenmedik Bir Şey Oldu",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Üzgünüz, kurtarılamaz bir hata oluştu{{notified}}. Lütfen sayfayı yeniden yüklemeyi deneyin, geçici bir hata olabilir.",
   "our engineers have been notified": "mühendislerimiz bilgilendirildi",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Detayı göster",
   "{{userName}} archived": "{{userName}} arşivledi",
   "{{userName}} restored": "{{userName}} geri yükledi",
