fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "Скопіювати ID",
   "Clear IndexedDB cache": "Очистити кеш IndexedDB",
   "IndexedDB cache cleared": "Кеш IndexedDB очищено",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Ввімкнути/вимкнути ведення журналу відлагодження",
   "Debug logging enabled": "Журнал налагодження увімкнено",
   "Debug logging disabled": "Журнал налагодження вимкнено",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "На жаль, не вдалося завантажити частину програми. Це може бути тому, що вона була оновлена після того, як ви відкрили вкладку або через невдалий мережевий запит. Будь ласка, спробуйте перезавантажити.",
   "Reload": "Перезавантажити",
   "Something Unexpected Happened": "Щось пішло не так",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Вибачте, сталася невиправна помилка{{notified}}. Спробуйте перезавантажити сторінку, можливо, це був тимчасовий збій.",
   "our engineers have been notified": "наші інженери були повідомлені",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Показати деталі",
   "{{userName}} archived": "{{userName}} заархівовано",
   "{{userName}} restored": "{{userName}} відновлено",
