fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "复制 ID",
   "Clear IndexedDB cache": "清除 IndexedDB 缓存",
   "IndexedDB cache cleared": "IndexedDB 缓存已清除",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "切换调试日志",
   "Debug logging enabled": "调试日志已启用",
   "Debug logging disabled": "调试日志已禁用",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "对不起，部分应用程序加载失败。这可能是因为它在您打开选项卡后更新了，或者是因为网络请求失败。请尝试重新加载。",
   "Reload": "重新加载",
   "Something Unexpected Happened": "发生了一些意料之外的错误",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "抱歉，出现了一个无法恢复的错误{{notified}}。推测只是暂时异常，请尝试重新加载页面。",
   "our engineers have been notified": "已通知我们的工程师",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "显示详情",
   "{{userName}} archived": "已被 {{userName}} 归档",
   "{{userName}} restored": "已被 {{userName}} 恢复",
