fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "複製 ID",
   "Clear IndexedDB cache": "清除索引資料庫快取",
   "IndexedDB cache cleared": "索引資料庫快取已清除",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "啟用除錯日誌",
   "Debug logging enabled": "除錯日誌已啟動",
   "Debug logging disabled": "偵錯記錄已停用",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "抱歉，部分應用程式載入失敗。有可能是因為在您打開分頁後被更新過，或是網路連線請求失敗。請嘗試重新載入。",
   "Reload": "重新載入",
   "Something Unexpected Happened": "發生了未預期的狀況",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "抱歉，發生了無法回復的錯誤 {{notified}}。錯誤有可能只是暫時的，請嘗試重新載入頁面。",
   "our engineers have been notified": "我們的工程師已經收到通知",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "顯示詳情",
   "{{userName}} archived": "{{userName}} 將其封存",
   "{{userName}} restored": "{{userName}} 將其還原",
