fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "Sao chép ID",
   "Clear IndexedDB cache": "Xóa bộ nhớ đệm IndexedDB",
   "IndexedDB cache cleared": "Đã xóa bộ nhớ đệm IndexedDB",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Bật, tắt lưu thông tin sửa lỗi",
   "Debug logging enabled": "Đã bật ghi nhật ký gỡ lỗi",
   "Debug logging disabled": "Đã tắt ghi nhật ký gỡ lỗi",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Xin lỗi, một phần của ứng dụng không tải được. Điều này có thể là do nó đã được cập nhật kể từ khi bạn mở tab hoặc do yêu cầu mạng không thành công. Vui lòng thử tải lại.",
   "Reload": "Tải lại",
   "Something Unexpected Happened": "Điều gì đó không mong muốn đã xảy ra",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Xin lỗi, đã xảy ra lỗi không thể khôi phục{{notified}}. Vui lòng thử tải lại trang, nó có thể là một trục trặc tạm thời.",
   "our engineers have been notified": "các kỹ sư của chúng tôi đã được thông báo",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Hiển thị chi tiết",
   "{{userName}} archived": "{{userName}} được lưu trữ",
   "{{userName}} restored": "{{userName}} khôi phục",
