--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "Copiar ID",
   "Clear IndexedDB cache": "Limpar cache do IndexedDB",
   "IndexedDB cache cleared": "Cache do IndexedDB limpo",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Alternar log de depuração",
   "Debug logging enabled": "Log de depuração habilitado",
   "Debug logging disabled": "Log de depuração desativado",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Desculpe, parte da aplicação falhou ao carregar. Isto pode ser porque foi atualizado desde que você abriu a guia ou devido a uma requisição de redecom falha. Tente recarregar.",
   "Reload": "Recarregar",
   "Something Unexpected Happened": "Algo inesperado aconteceu",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Desculpe, ocorreu um erro irrecuperável{{notified}}. Por favor, tente recarregar a página, pode ter sido uma falha temporária.",
   "our engineers have been notified": "nossos engenheiros foram notificados",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Exibir detalhes",
   "{{userName}} archived": "{{userName}} arquivado",
   "{{userName}} restored": "{{userName}} restaurado",
