fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "Salin ID",
   "Clear IndexedDB cache": "Clear IndexedDB cache",
   "IndexedDB cache cleared": "IndexedDB cache cleared",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Toggle debug logging",
   "Debug logging enabled": "Debug logging enabled",
   "Debug logging disabled": "Debug logging disabled",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Maaf, sebagian dari aplikasi gagal dimuat. Hal ini mungkin terjadi karena aplikasi telah diperbarui sejak Anda membuka tab atau karena permintaan yang gagal. Silakan coba memuat ulang.",
   "Reload": "Muat ulang",
   "Something Unexpected Happened": "Sesuatu Yang Tidak Terduga Terjadi",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Maaf, terjadi kesalahan yang tidak dapat dipulihkan{{notified}}. Silakan coba memuat ulang halaman, mungkin ada kesalahan sementara.",
   "our engineers have been notified": "teknisi kami telah diberitahu",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Show detail",
   "{{userName}} archived": "{{userName}} mengarsipkan",
   "{{userName}} restored": "{{userName}} memulihkan",
