fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "کپی شناسه",
   "Clear IndexedDB cache": "خالی کردن کش دیتابیس",
   "IndexedDB cache cleared": "کش دیتابیس پاکسازی شد",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "فعالسازی لاگ اشکال یاب",
   "Debug logging enabled": "لاگ اشکال یاب روشن شد",
   "Debug logging disabled": "لاگ اشکال یاب خاموش شد",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "متأسفانه امکان بارگیری بخشی از برنامه وجود نداشت. این خطا ممکن است به خاطر به‌روزرسانی ماژول یا اختلال شبکه ایجاد شده باشد. لطفاً دوباره صفحه را بارگیری کنید.",
   "Reload": "بارگیری مجدد",
   "Something Unexpected Happened": "اتفاق غیر منتظره‌ای رخ داده است",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "متأسفانه یک خطای غیرقابل بازیابی رخ داد {{notified}}. لطفاً دوباره صفحه را بارگیری کنید، خطا ممکن است موقت بوده باشد.",
   "our engineers have been notified": "به مهندسان ما اطلاع‌رسانی شد",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Show detail",
   "{{userName}} archived": "{{userName}} بایگانی شد",
   "{{userName}} restored": "{{userName}} بازیابی شد",
